[Discounts] Apply shared coupon discount