@@ -6,6 +6,7 @@ import com.vpe.finalstore.customer.repositories.CustomerAddressRepository;
 import com.vpe.finalstore.customer.repositories.CustomerRepository;
 import com.vpe.finalstore.discount.entities.AppliedDiscount;
 import com.vpe.finalstore.discount.repositories.AppliedDiscountRepository;
+import com.vpe.finalstore.discount.services.CouponService;
 import com.vpe.finalstore.exceptions.BadRequestException;
 import com.vpe.finalstore.exceptions.NotFoundException;
 import com.vpe.finalstore.inventory.dtos.InventoryMovementCreateDto;
@@ -27,6 +28,7 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
@@ -46,6 +48,7 @@ public class OrderService {
     private final InvoiceRepository invoiceRepository;
     private final ShipmentService shipmentService;
     private final AppliedDiscountRepository appliedDiscountRepository;
+    private final CouponService couponService;
 
     @Transactional
     public Order createOrderFromCart(UUID cartId, Integer customerId, Integer addressId, Integer carrierId) {
@@ -97,11 +100,22 @@ public class OrderService {
             order.getOrderItems().add(orderItem);
         }
 
-        orderSummaryCalculator.calculateOrderSummary(order);
+        // Get coupon from cart if exists
+        var coupon = cart.getCoupon();
+
+        // Re-validate coupon at checkout time to prevent race conditions
+        if (coupon != null && !couponService.isValidCoupon(coupon.getCode())) {
+            throw new BadRequestException(
+                "Coupon " + coupon.getCode() + " is no longer valid or has reached its usage limit. Please remove it and try again."
+            );
+        }
+
+        orderSummaryCalculator.calculateOrderSummary(order, coupon);
 
         orderRepository.save(order);
 
-        var appliedDiscountsMap = orderSummaryCalculator.getAppliedDiscounts(order);
+        // Track item-level discounts
+        var appliedDiscountsMap = orderSummaryCalculator.getAppliedDiscounts(order, coupon);
         var appliedDiscountsList = appliedDiscountsMap.entrySet().stream()
             .map(entry -> {
                 var orderItem = entry.getKey();
@@ -115,9 +129,35 @@ public class OrderService {
                 appliedDiscount.setAppliedAt(LocalDateTime.now());
                 return appliedDiscount;
             })
-            .toList();
+            .collect(java.util.stream.Collectors.toList());
+
+        // Track order-level discount (coupon or automatic)
+        var orderLevelDiscount = orderSummaryCalculator.getOrderLevelDiscount(order, coupon);
+        if (orderLevelDiscount != null && order.getDiscountAmount().compareTo(BigDecimal.ZERO) > 0) {
+            var itemDiscountsTotal = appliedDiscountsList.stream()
+                .map(AppliedDiscount::getDiscountAmount)
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
+
+            var orderDiscountAmount = order.getDiscountAmount().subtract(itemDiscountsTotal);
+
+            if (orderDiscountAmount.compareTo(BigDecimal.ZERO) > 0) {
+                var appliedDiscount = new AppliedDiscount();
+                appliedDiscount.setOrder(order);
+                appliedDiscount.setOrderItem(null); // Order-level discount
+                appliedDiscount.setDiscount(orderLevelDiscount);
+                appliedDiscount.setCoupon(coupon); // Track which coupon was used
+                appliedDiscount.setDiscountAmount(orderDiscountAmount);
+                appliedDiscount.setAppliedAt(LocalDateTime.now());
+                appliedDiscountsList.add(appliedDiscount);
+            }
+        }
 
         appliedDiscountRepository.saveAll(appliedDiscountsList);
+
+        // Increment coupon usage count if coupon was used
+        if (coupon != null) {
+            couponService.incrementUsageCount(coupon.getCouponId());
+        }
 
         shipmentService.createShipment(carrierId, order);
 
